--- a/report/_output.yml
+++ b/report/_output.yml
@@ -10,8 +10,13 @@ bookdown::gitbook:
     edit: https://github.com/rstudio/bookdown-demo/edit/master/%s
     download: ["pdf", "epub"]
 bookdown::pdf_book:
-  latex_engine: xelatex
   keep_tex: yes
+  toc: true
+  latex_engine: xelatex
+  md_extensions: +east_asian_line_breaks
+  template: ./style/bookdown-pdf-template.tex
+  citation_package: natbib
+  pandoc_args: ["--top-level-division=chapter", "--bibliography=Bibfile", "--listing", "--filter", "pandoc-crossref"]
 bookdown::html_document2:
   number_sections: true
   seq_numbering: true
