--- a/report/_output.yml
+++ b/report/_output.yml
@@ -12,6 +12,7 @@ bookdown::gitbook:
 bookdown::pdf_book:
   keep_tex: yes
   toc: true
+  toc_depth: 4
   latex_engine: xelatex
   md_extensions: +east_asian_line_breaks
   template: ./style/bookdown-pdf-template.tex
