--- a/report/_output.yml
+++ b/report/_output.yml
@@ -10,6 +10,8 @@ bookdown::gitbook:
     edit: https://github.com/rstudio/bookdown-demo/edit/master/%s
     download: ["pdf", "epub"]
 bookdown::pdf_book:
+  includes:
+    after_body: backmatters.tex
   keep_tex: yes
   toc: true
   toc_depth: 4
